<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/primary_1">

        <TextView
            android:id="@+id/tvTituloCuadroDialogoModoOnline"
            style="@style/textTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/margen_superior"
            android:text="@string/modo_online" />

        <ImageButton
            android:id="@+id/ibSalirCuadroDialogoModoOnline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/margen_pequenho"
            android:background="@null"
            android:src="@drawable/iconosalir" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTituloCuadroDialogoModoOnline"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/margen_superior"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/bContinuarCuadroDialogoModoOnline"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continuar" />

            <Button
                android:id="@+id/bNuevaPartidaCuadroDialogoModoOnline"
                style="@style/buttonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nueva_partida" />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>